# segment_global_planner

./: CMakeLists.txt  README.md  package.xml  segment_global_planner_plugin.xml
cfg/: SegmentGlobalPlannerParams.cfg
include/segment_global_planner/: common.h  line_segment.h  segment_global_planner.h
param/: move_base.xml  move_base_params.yaml  segment_global_planner_params.yaml
rviz/: turtlebot3_segment_global_planner.rviz
scripts/: test.py
src/: line_segment.cpp  publish_trajectory_70.cpp  segment_global_planner.cpp
src/test/: publish_trajectory_70.cpp
