<?xml version="1.0"?>
<package format="2">
  <name>segment_global_planner</name>
  <version>3.0.0</version>
  <description>A ROS global planner plugin for segments tracking.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="1121391435@qq.com">wind</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_reconfigur</build_depend>
  <build_export_depend>nav_core</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>dynamic_reconfigur</build_export_depend>
  <exec_depend>nav_core</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>dynamic_reconfigur</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>costmap_2d</depend>
  <depend>base_local_planner</depend>
  <depend>tf2</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nav_core plugin="${prefix}/segment_global_planner_plugin.xml" />
  </export>
</package>
